# ocr-invoice-clean

backend/: pyproject.toml
