[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easyocr==1.7.1",
    "fastapi==0.111.0",
    "numpy==1.26.4",
    "opencv-python==4.10.0.84",
    "pdf2image==1.17.0",
    "pillow==10.4.0",
    "pypdf2==3.0.1",
    "pytesseract==0.3.10",
    "python-multipart==0.0.9",
    "uvicorn[standard]==0.30.1",
]
